@@ -12,6 +12,7 @@ abstract: |
 
   It consists of two paragraphs.
 bibliography: sigproc.bib
+csl: acm-sig-proceedings.csl
 output: rticles::acm_article
 ---
 
